# Smart-Workout-Planner

./: README.md  exercise_database.json  nixpacks.toml
gym planner/: .gitignore  README.md  start-demo.sh
gym planner/backend/: CMakeLists.txt  build.sh  nixpacks.toml.bak  start.sh
gym planner/backend/include/: Exercise.h  WorkoutSession.h  helpers.h
gym planner/backend/src/: main.cpp
gym planner/backend/src/algorithms/: Exercise.cpp  WorkoutPlanner.cpp  WorkoutSession.cpp  helpers.cpp
gym planner/backend/src/controllers/: UserController.cpp  UserController.h
gym planner/backend/src/models/: UserModels.h
gym planner/backend/src/services/: AlgorithmAdapter.cpp  AlgorithmAdapter.h  ExerciseService.cpp  WorkoutPlanningService.cpp  WorkoutPlanningService.h
gym planner/backend/src/utils/: SimpleJson.cpp  SimpleJson.h  SimpleServer.cpp  SimpleServer.h
gym planner/frontend/: index.html  package.json
gym planner/frontend/src/: App.tsx  index.css
gym planner/frontend/src/components/: FitnessAnalyzer.tsx
gym planner/frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx  slider.tsx
include/: Exercise.h  User.h  WorkoutPlanner.h  helpers.h
src/: Exercise.cpp  User.cpp  WorkoutPlanner.cpp  main.cpp
